Adjust slider styling to work with overflow issue

--- a/app/assets/stylesheets/api/app.scss
+++ b/app/assets/stylesheets/api/app.scss
@@ -1,7 +1,6 @@
 #app-main-container {
   position: relative;
   height: 100%;
-  overflow: hidden;
 }
 
 footer {
