--- a/app/assets/stylesheets/api/mediabar.scss
+++ b/app/assets/stylesheets/api/mediabar.scss
@@ -6,7 +6,7 @@
   height: 100%;
   width: 100%;
   background-color: #224099;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 input[type=range] {
@@ -20,9 +20,9 @@ input[type=range]::-webkit-slider-thumb {
   z-index: 5;
   cursor: pointer;
   border: 1px solid black;
-  height: 15px;
-  width: 10px;
-  margin-top: -5px;
+  height: 8px;
+  width: 8px;
+  margin-top: -1.2px;
   border-radius: 10px;
   background: white;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
